--- a/index.html
+++ b/index.html
@@ -4,64 +4,57 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<button onclick="turnOn()">bat</button> <br/>
+<button onclick="turnOff()">tat</button>
 <body><script>
-    let Battery = function () {
-       this.setEnergy = function (energy) {
-           this.energy = energy;
-       } ;
-
-       this.getEnergy = function () {
-           return this.energy;
-       };
-
-       this.decreaseEnergy = function () {
-           if (this.energy >0 ){
-               this.energy--;
-           }
-       }
-    };
-
-    let FlashLamp = function () {
-        this.setBattery = function (battery) {
-           this.battery =battery;
+    function Battery(energy) {
+        this.energy= energy;
+        this.setEnergy = function (energy) {
+            this.energy = energy;
         };
-
+        this.getEnergy = function () {
+            return this.energy;
+        };
+        this.decreaseEnergy = function () {
+            if(this.energy>0){
+                this.energy--;
+            }
+        }
+    }
+    function FlashLamp(battery, status) {
+        this.battery=battery;
+        this.status=status;
+        this.setBattery = function (battery) {
+            this.battery = battery;
+        };
         this.getBatteryInfo = function () {
             return this.battery.getEnergy();
         };
-
         this.light = function () {
-            if(this.status){
-                alert("lighting");
-            } else {
-                alert("not lighting");
+            if(this.status===true){
+                alert("Lighting");
+            }else {
+                alert("Not lighting");
             }
         };
         this.turnOn = function () {
             this.status = true;
+            this.battery.decreaseEnergy();
         };
-        this.turnoff = function () {
+        this.turnOff = function () {
             this.status = false;
         }
-    };
-
-    let battery = new Battery();
-    battery.setEnergy(10);
-
-    let flashLamp = new FlashLamp();
-    flashLamp.setBattery(battery);
-
-    document.write("thong tin ve pin: " + flashLamp.getBatteryInfo() + "<br/>" );
-    flashLamp.light();
-
-    document.write("bat den<br/>")
-    flashLamp.turnOn();
-    flashLamp.light();
-    document.write("thong tin ve pin: " + flashLamp.getBatteryInfo() + "<br/>");
-
-    document.write("tat den<br/>")
-    flashLamp.turnoff();
-    flashLamp.light();
+    }
+    let battery = new Battery(10);
+    let flashLamp = new FlashLamp(battery, true);
+    function turnOff() {
+        flashLamp.turnOff();
+        flashLamp.light();
+    }
+    function turnOn() {
+        flashLamp.turnOn();
+        flashLamp.light();
+    }
 </script>
 
 </body>
